lab_1/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, sans-serif;
}

@font-face {
    font-family: Maghfirea;
    src: url("./fonts/Maghfirea.otf") format("opentype");
}

@font-face {
    font-family: Bastro;
    src: url("./fonts/Bastro.otf") format("opentype");
}

@font-face {
    font-family: "Water Brush";
    src: url("./fonts/WaterBrush-Regular.ttf") format("opentype");
}

.navbar {
    display: flex;
    justify-content: space-between;
    background-color: #333;
    padding: 10px 20px;
    position: fixed;
    top: 0;
    width: 100%;
}

.navbar__menu {
    display: flex;
    list-style: none;
}

.navbar__menu li {
    margin-right: 20px;
}

.navbar__menu a {
    color: #fff;
    text-decoration: none;
    font-size: 16px;
}

.navbar__icons a {
    color: #fff;
    text-decoration: none;
    font-size: 16px;
    margin-left: 20px;
    display: flex;
    align-items: center;
}

.navbar__icons i {
    margin-right: 5px;
}

.container {
    background-image: url("ImgSourse/container/fon.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat, no-repeat;
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 0;
    margin-top: 25px;

    @media screen and (max-width: 768px) {
        flex-direction: column;
    }
}

.section__left__content {
    background-image: url("ImgSourse/container/left_section/fon.png");
    background-size: cover;
    background-position: right;
    background-repeat: no-repeat, no-repeat;
    flex: 1;
    padding: 20px;
    width: 50%;
    height: 930px;;
    margin: 0;

    text-align: center;
}

.section__right_content {
    background-image: url("ImgSourse/container/right_section/fon.png");
    background-size: cover;
    background-position: left;
    background-repeat: no-repeat;
    flex: 1;
    width: 50%;
    height: 930px;
    padding: 20px;
    margin: 0;
    text-align: center;
}

.section__title {
    color: #fff;
    font-size: 140px;
    font-weight: 400;
    line-height: 222px;
    text-align: left;
    margin-bottom: 10px;
    font-family: Bastro, sans-serif;
}

.section__content aside {
    color: #ffffff;
    font-family: 'Maghfirea', serif;
    font-size: 60px;
    font-weight: 400;
    line-height: 65px;
    text-align: left;
    margin-top: 55%;
    margin-left: 45%;

}

.section__quote {
    color: #f9f9f9;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-family: 'Bastro', sans-serif;
    font-size: 40px;
    font-weight: 400;
    line-height: 65px;
    text-align: right;

}

.quote__part1 {
    font-size: 50px;
    font-family: 'Water Brush', cursive;
    text-align: right;
    word-wrap: break-word;
}

.quote__part2 {
    align-self: flex-end;
    text-align: center;
    word-wrap: break-word;
}

.highlight {
    font-family: 'Bastro', sans-serif;
}

.highlight-noise {
    font-family: 'Maghfirea', cursive;
}

.container_button {
    margin-top: 15%;
    display: inline-block;
    padding: 10px 20px;
    color: #fff;
    text-decoration: none;
    border-radius: 14px;
    border: 1px solid orange;
}

.collections {
    background-image: url("ImgSourse/collections/fone.png");
    width: 100%;
    background-repeat: no-repeat;
    height: 1248px;
}

.collections__content__container {
    display: flex;
    justify-content: center;
    align-items: center;

    height: 100%;
    position: relative;
}

.collections h2 {
    font-family: 'Bastro', serif;
    font-size: 30px;
    font-weight: 400;
    line-height: 64px;
    text-align: left;
    position: absolute;
    bottom: 27.5%;
    right: 25.5%;
    color: black;
    z-index: 1;
}

.collections__aside {
    font-family: "Maghfirea", serif;
    position: absolute;
    font-size: 36px;
    font-weight: 400;
    line-height: 45px;
    width: 15%;
    bottom: 18%;
    right: 23.5%;
    word-wrap: break-word;
    color: black;
    z-index: 1;
}

.collections__content__container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.collections__content {
    background-color: white;
    background-image: url("ImgSourse/collections/collectuins__content/fone.png");
    background-size: cover;
    background-position: center;
    border-radius: 12px;
    border: 2px orange solid;
    display: flex;
    box-shadow: 0 4px 170px -26px #CFD6E294;
    width: 50%;
    height: 500px;
}

.collections__content__left {
    flex: 1 1 auto;
}

.collections__content__right {
    flex: 1 1 auto;
}

.collections__content__title {
    font-family: 'Water Brush', cursive;
    font-size: 78px;
    font-weight: 400;
    line-height: 85px;
    text-align: left;
    margin-left: 50px;
    margin-top: 40px;
}

.collections__content__aside {
    color: #ffffff;
    font-family: 'Maghfirea', serif;
    font-size: 96px;
    font-weight: 400;
    line-height: 104px;
    text-align: left;
    margin-top: 38%;
    margin-left: 44%;
}

.collection__column {
    width: 48%;
    text-align: left;
}

.collection__column a {
    display: block;
    margin-top: 4px;
    margin-bottom: 2px;
    color: #ffffff;
    font-family: 'Maghfirea', serif;
    font-size: 18px;
    font-weight: 400;
    line-height: 20px;
}

.collection__column a:hover {
    text-decoration: underline;
}

.collections__button {
    position: absolute;
    bottom: 10%;
    right: 21%;
    height: 100px;
}

.collections__button a {
    color: #EB5E28;
    font-family: 'Maghfirea', serif;
    font-size: 59px;
    font-weight: 400;
    line-height: 64px;
    text-align: left;
}

.collections__button p {
    font-family: 'Water Brush', cursive;
    font-size: 55px;
    font-weight: 400;
    line-height: 81px;
    text-align: left;
}

.footer {
    background-color: #333;
    color: #fff;
    padding: 20px;
    text-align: center;
}

.footer__contacts, .footer__payment {
    margin: 10px 0;
}

